--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<html>
+  <head></head>
+  <body>
+    <image class="mainoption" src="eye.png"/>
+      <image class="mainoption" src="ear.png"/>
+        <image class="mainoption" src="hand.png"/>
+  </body>
+</html>
