--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <html>
-  <head></head>
+  <head>
+    <style>
+      .mainoption
+      {
+        width:15vw;
+        height:auto;
+      }
+      .mainoption:active
+      {
+        border:1vw black solid;
+      }
+      body
+      {
+        background-color:	#FFA500;
+      }
+    </style>
+  </head>
   <body>
     <image class="mainoption" src="eye.png"/>
       <image class="mainoption" src="ear.png"/>
