--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
       body
       {
         background-color:	#FFA500;
+        items-align:center;
       }
     </style>
   </head>
   <body>
+    <h1>影片趣</h1>
+    <h1>Elder Video Editing</h1>
     <image class="mainoption" src="eye.png"/>
       <image class="mainoption" src="ear.png"/>
         <image class="mainoption" src="hand.png"/>
