--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       {
         width:15vw;
         height:auto;
+        border-radius:1vw;
       }
       .mainoption:active
       {
@@ -14,6 +15,9 @@
       {
         background-color:	#FFA500;
         items-align:center;
+      }
+      h1{
+        color:#2E2E2E;        
       }
     </style>
   </head>
