--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       body
       {
         background-color:	#FFA500;
-        items-align:center;
+        justify-content: center;
       }
       h1{
         color:#2E2E2E;        
