--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         width:15vw;
         height:auto;
         border-radius:1vw;
+        justify-content: center;
+        items-align:center;
       }
       .mainoption:active
       {
@@ -14,7 +16,7 @@
       body
       {
         background-color:	#FFA500;
-        justify-content: center;
+        
       }
       h1{
         color:#2E2E2E;        
