--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         width:15vw;
         height:auto;
         border-radius:1vw;
-        justify-content: center;
-        items-align:center;
       }
       .mainoption:active
       {
@@ -16,6 +14,7 @@
       body
       {
         background-color:	#FFA500;
+        text-align:center;
         
       }
       h1{
