--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <body>
     <h1>影片趣</h1>
     <h1>Elder Video Editing</h1>
-    <image class="mainoption" src="eye.png"/>
-      <image class="mainoption" src="ear.png"/>
-        <image class="mainoption" src="hand.png"/>
+    <image class="mainoption" src="eye.png" href="Multimedia_Video_Processing_Platform.html"/>
+      <image class="mainoption" src="ear.png" href="Multimedia_Video_Processing_Platform.html"/>
+        <image class="mainoption" src="hand.png" href="Multimedia_Video_Processing_Platform.html"/>
   </body>
 </html>
